Added js script

--- a/index.html
+++ b/index.html
@@ -79,6 +79,25 @@
         </div>
     </section>
 
+    <div>
+        <h3>Random Pick Tour Trip</h3>
+           <div>
+             <ul>
+               <li>Cable Car</li>
+               <li>The Bo-Kaap</li>
+               <li>Paragliding</li>
+               <li>The Robbeneiland</li>
+               <li>The V&A Waterfront Cruise</li>
+               <li>The Wine Tram</li>
+             </ul>
+           </div>
+        <button id="button">Select Trip</button>
+        <p>Selected Trip:</p>
+        <div id="trip"></div>
+    </div>
+
+    <div></div><br><br>
+
     <div class="guide">
         <img class="avatar" src="images/Luke.jpg" alt="Tour Guide">
         <h4>Luke Dube</h4>
@@ -87,5 +106,6 @@
     </div>
 
     <div class="footer">© 2024 iSirLuke</div>
+<script src="script.js"></script>
 </body>
 </html>
