Added Button css

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
 
     <div>
-        <h3>Random Pick Tour Trip</h3>
+        <h3><strong>Random Pick Tour Trip</strong></h3>
            <div>
              <ul>
                <li>Cable Car</li>
